--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "crodas/activemongo2-laravel",
     "description": "ActiveMongo2 for Laravel4",
     "require": {
-        "crodas/activemongo2": "*"
+        "crodas/activemongo2": "dev-develop"
     },
     "license": "MIT",
     "authors": [
