use dev for now

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "crodas@php.net"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "crodas": "lib/"
